# epsilon_docker

./: .gitignore  .gitmodules  README.md  _gui_screenshot_runner.py  auton_io_test.py  bench_parity_check.sh  bench_recorder_cost.sh  boat_internet.sh  camera_controls.sh  clone_optional.sh  colcon_defaults.yaml  course_monitor.py  depth_only_test.sh  full_course_monitor.py  fusion_harden_test.sh  fusion_monitor.py  generate_packages.py  gpu_test.sh  i2c_test.py  judge.py  mdns.sh  motortest.sh  networked_folder.sh  optional_repos.yaml  run_auton_test.sh  run_course.sh  run_full_course_test.sh  run_fusion_test.sh  run_imu.sh  run_sim_fusion_test.sh  run_sim_mission.sh  run_style_roll_test.sh  setup.linux.sh  sim_depth_monitor.py  sim_mission_monitor.py  staleness_test.sh  style_roll_monitor.py  vision_probe.py
.devcontainer/: Dockerfile.dev  apt-packages.txt  boat.param  dev.bashrc  dev.helper.txt  devcontainer.json  docker-compose.yml  (+21 more)
src/epsilon_bridge/: package.xml  setup.cfg  setup.py  setup.py.bak  setup.py.pre-prequal.20260622-140933
src/epsilon_bridge/config/: allocation.yaml
src/epsilon_bridge/epsilon_bridge/: arming_helper.py  sensor_bridge.py  sensor_bridge.py.pre-harden.20260704  sensor_bridge.py.pre-prequal.20260622-140933  sysid_logger.py  sysid_runner.py  thruster_bridge.py  thruster_bridge.py.pre-prequal.20260622-140933
src/epsilon_bridge/launch/: hardware.launch.py  hardware.launch.py.bak  hardware.launch.py.pre-fusion.20260702  hardware.launch.py.pre-parity.20260703  hardware.launch.py.pre-prequal.20260622-140933  prequal.launch.py  sysid.launch.py
(+176 files in other folders)
