<?xml version="1.0"?>
<package format="3">
  <name>epsilon_bridge</name>
  <version>0.0.1</version>
  <description>Bridges epsilon hardware (epsilon_sensors/epsilon_control) to the robosub nav stack.</description>
  <maintainer email="doug@douglasjohnson.org">epsilon</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
